--- a/CSS/movie.css
+++ b/CSS/movie.css
@@ -6,17 +6,17 @@ html {
 }
 
 header {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(255, 255, 255);
   margin: 10px auto;
   width: 900px;
   text-align: center;
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
   border-radius: 5px;
   padding: 25px 100px;
 }
 
 hr {
-  border-color: black;
+  border-color: rgb(255, 255, 255);
 }
 
 .nav {
@@ -29,11 +29,11 @@ hr {
 }
 
 .main {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(255, 255, 255);
   margin: 50px auto;
   width: 900px;
   text-align: center;
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
   border-radius: 5px;
   padding: 25px 100px;
 }
